saves/test/demo_full_20240802_193545/timer/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp timer_tb.v timer.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
timer_tb.v:98: $finish called at 440000 (1ps)

iverilog cmd 2 error:

